<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetan.n0_dues.AddDuesFragment"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_name_from_your_contact_either_or_add_by_your_own"
        android:textAppearance="?android:attr/textAppearanceSmall"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/adDueFragEtName"
            android:hint="@string/name_here"

            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:id="@+id/addFragNameFrmCtctSpinner"
            ></android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/addFragEtDueAmount"
            android:hint="@string/due_amount_inr"
          />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/select_name"
            android:layout_gravity="center_horizontal"

            android:onClick="selectCtOfMA"

            />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_due"
        android:layout_gravity="center_horizontal"


        android:nestedScrollingEnabled="false"
        android:onClick="addToSqLite"

        />

</LinearLayout>






