<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetan.n0_dues.EditFragment">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edFragAspinner"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_new_details_amp_click_on_make_changes_button"
        android:id="@+id/tvedFragNewDetails"
        android:textStyle="bold"
        android:layout_below="@+id/edFragAspinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="119dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etedFragNewName"
        android:hint="@string/new_name_here"
        android:layout_below="@+id/tvedFragNewDetails"
        android:layout_centerHorizontal="true"
      />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etedFragNewDue"
        android:hint="@string/new_due_amount"
        android:layout_below="@+id/etedFragNewName"
        android:layout_alignRight="@+id/etedFragNewName"
        android:layout_alignEnd="@+id/etedFragNewName"
       />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_changes"
        android:layout_below="@+id/etedFragNewDue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="makeChangesOfMA"
  />

</RelativeLayout>


